2008-03-20	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* lib/src/lock_widget.cpp:
	disable screen-saver while screen is locked (e.g. while fullscreen-demo)

2008-03-19	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ica/ica.qrc:
	* ica/resources/fi.ts:
	* ica/resources/fi.qm:
	* setup/setup.qrc:
	* setup/resources/fi.ts:
	* setup/resources/fi.qm:
	* ima/italc.qrc:
	* ima/resources/fi.ts:
	* ima/resources/fi.qm:
	* lib/italc_core.qrc:
	* lib/resources/fi.ts:
	* lib/resources/fi.qm:
	added Finnish localization-files by Andrei Krueger <anc/at/iki/dot/fi>

2008-03-17	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* lib/src/fast_qimage.cpp:
	disabled MMX-optimized code on x86_64 for the time being as it crashes
	sometimes - needs to be reviewed somewhen later

	applied patches by Andrei Krueger <anc/at/iki/dot/fi>:

	* configure.in:
	* lib/src/vncview.cpp:
	* ica/src/system_service.cpp:
	* ima/src/client.cpp:
	fixed compiler-warnings

	* ima/src/client.h:
	* ima/src/client.cpp:
	added zoom-feature

2008-03-10	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* lib/src/fast_qimage.cpp:
	fixed (superfluous) MMX detection on 64-bit-platforms

2008-03-09	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* README:
	* configure.in:
	made 1.0.7 release

2008-03-06	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ima/resources/de.ts:
	updated

	* ima/dialogs/support.ui:
	* ima/resources/remote_control_16.png:
	* ima/resources/remote_control.png:
	new icon and other UI-fixes

	* ica/src/local_system_ica.cpp:
	* ima/dialogs/overview.ui:
	* ima/src/user_list.cpp:
	* ima/src/classroom_manager.h:
	* ima/src/main_window.cpp:
	* ima/src/client.cpp:
	* ima/src/user_list.h:
	* ima/src/classroom_manager.cpp:
	* ima/Makefile.am:
	applied patch by Andrei Krueger <anc/at/iki/dot/fi>:
	- Merged userlist-view into classManager-view. Second column can show