@@ -1,5 +1,12 @@
 2008-03-20	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>
 
+	* ima/src/classroom_manager.h:
+	* ima/src/client.cpp:
+	* ima/src/classroom_manager.cpp:
+	applied patches by Andrei Krueger <anc/at/iki/dot/fi> which displays
+	host-name in client-windows if "show user"-name checkbox in
+	classroom-manager is not activated
+
 	* lib/src/lock_widget.cpp:
 	disable screen-saver while screen is locked (e.g. while fullscreen-demo)
 
